added PD controller for angular velocity, setpoints can be set from yaml file

--- a/launch/pid_params.yaml
+++ b/launch/pid_params.yaml
@@ -1,4 +1,4 @@
-#Independent settings for the planner's costmap
+#distance controller parameters
 Kp_gain: 2.0
 Ki_gain: 0.0
 Kd_gain: 0.01
@@ -6,3 +6,16 @@ upper_limit: 1.0
 lower_limit: -1.0
 sampling_time: 0.1
 scaling_factor: 1.0
+
+#heading controller parameters
+Kp_gain_ang: 0.5
+Ki_gain_ang: 0.0
+Kd_gain_ang: 0.01
+upper_limit_ang: 0.176
+lower_limit_ang: -0.176
+sampling_time_ang: 0.1
+scaling_factor_ang: 1.0
+
+#common parameters
+desired_distance: 1.5
+desired_angle: 0.1
