--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>tag_pose_controller_ros</name>
+  <name>tag_pose_controller_node</name>
   <version>0.0.0</version>
-  <description>The tag_pose_controller_ros package</description>
+  <description>The tag_pose_controller_node package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
