launch: rename output port name to the new visual_servoing name in twist_mux.

--- a/launch/pid_params.yaml
+++ b/launch/pid_params.yaml
@@ -19,4 +19,4 @@ scaling_factor_ang: 1.0
 #common parameters
 desired_distance: 1.4
 desired_angle: 0.0 #0.1
-output_port_name: "spacenav/cmd_vel"
+output_port_name: "visual_servoing/cmd_vel"
